Refactor code structure and improve readability across multiple files; close resources properly and update class names for consistency.